# django-project-template

./: .gitignore  Pipfile  README.md  manage.py  secrets.json  setup.cfg  setup.py  tox.ini
Libs/: README.md
data/: README.md
media/: README.md
project_name/settings/: base.py  development.py  local.py  production.py  test.py
requirements/: base.txt  production.txt  test.txt
static/: README.md
staticfiles/: README.md
template/: settings.py
templates/: README.md
