[metadata]
;name =
version = 0.0.1
author = Example Author
author_email = author@example.com
description = A Django project template.
long_description = file: README.md
classifiers =
    Framework :: Django
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:

[flake8]
max-line-length = 119

[isort]
skip = .tox
default_section = THIRDPARTY
include_trailing_comma = true
not_skip = __init__.py

[tool:pytest]
DJANGO_SETTINGS_MODULE = demo.settings.development
python_files = tests.py test_*.py *_tests.py